--- a/resources/assets/less/pages/home.less
+++ b/resources/assets/less/pages/home.less
@@ -197,3 +197,7 @@
 		.border-radius(4px);
 	}
 }
+
+.nearby-area{
+	padding:0 15px;
+}
